# Coderbot

./: .gitignore  .pdm-python  README.md  pyproject.toml
chatApp/: package-lock.json
coderbot-v2/: .dockerignore  .env.example  .env.production  .gitignore  CONTEXT_ENGINEERING.md  CONTEXT_ENGINEERING_AUDIT.md  COOLIFY_DEPLOYMENT.md  DOCKER_README.md  Dockerfile  ENV_CONFIG.md  Makefile  RAG_COMMANDS.md  README.dev.md  coolify.yml  dev.sh  docker-compose.dev.yml  docker-compose.optimized.no-teacher.yml  docker-compose.optimized.yml  docker-compose.yml  setup-coolify-deployment.sh  setup-dev.sh  test-code-server-integration.sh  validate-deployment.sh
coderbot-v2/backend/: .env.example  .pdm-python  RAG_README.md  README.md  cleanup_duplicate_templates.py  final_test.py  pyproject.toml  requirements.txt  setup_pocketbase_admin.py  test_providers.py  validate_rag_system.py
coderbot-v2/backend/app/: config.py  main.py
coderbot-v2/backend/app/models/: adaptive_models.py  deepseek_models.py
coderbot-v2/backend/app/routers/: agno_router.py  analytics_router.py  classes_router.py  format_router.py  judge_router.py  notifications_router.py  piston_router.py  whiteboard_router.py
coderbot-v2/backend/app/services/: agno_methodology_service.py  agno_models.py  agno_service.py  agno_team_service.py  analytics_service.py  chat_service.py  claude_service.py  deepseek_service.py  educational_agent_service.py  educational_methodology_service.py  examples_rag_service.py  orchestration_service.py  pocketbase_service.py  prompt_loader.py  rag_service.py  template_service.py  whiteboard_ai_service.py
coderbot-v2/backend/app/services/agno/: README.md  __init__.py  agno_service.py  team_methodology_service.py
coderbot-v2/backend/app/services/agno/constants/: agno_constants.py
coderbot-v2/backend/app/services/agno/core/: context_service.py  response_service.py  validation_service.py  worked_examples_service.py
coderbot-v2/backend/app/services/agno/types/: agno_types.py
coderbot-v2/backend/app/services/configs/: model_config.json  prompt_config.json
coderbot-v2/backend/app/templates/: __init__.py  unified_prompt_template.py
coderbot-v2/backend/app/tools/: show_prompt.py
coderbot-v2/backend/examples/: README_COGNITIVE_TOOLS.md  cognitive_tools_demo.py  rag_example.py
coderbot-v2/backend/tests/services/: test_agno_ollama_support.py  test_educational_methodology_service.py  test_prompt_loader.py
coderbot-v2/coderbot-v2/: .env.example  docker-setup.sh
coderbot-v2/docker/: Dockerfile.backend  Dockerfile.backend.dev  Dockerfile.chatbot-teacher  Dockerfile.code-server  Dockerfile.frontend  Dockerfile.pocketbase  Dockerfile.qdrant  code-server-config.yaml  start.sh
coderbot-v2/docs/: ONBOARDING.md  setup.md
coderbot-v2/frontend/: .dockerignore  .env.example  ANALYTICS.md  cypress.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.docker.ts  vite.config.ts  vite.config.ts.timestamp-1749042018780-4ddf96662a88b.mjs
docs/coderbot-v2/: DOCKER_README.md  (+4 more)
(+314 files in other folders)
