[project]
version = "0.1.0"
description = ""
authors = [
    {name = "Mendes",email = "101375701+Mendes113@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "openai>=1.79.0",
    "anthropic>=0.51.0",
    "pydantic-settings>=2.9.1",
    "pocketbase>=0.15.0",
    "supabase>=2.15.1",
    "sqlalchemy>=2.0.41",
    "agno>=1.5.1"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
