[project]
name = "coderbot-v2-backend"
version = "2.0.0"
description = "CoderBot v2 - Advanced Educational Platform Backend"
authors = [
    {name = "Mendes", email = "101375701+Mendes113@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "openai>=1.79.0",
    "anthropic>=0.51.0",
    "pydantic-settings>=2.9.1",
    "pocketbase>=0.15.0",
    "supabase>=2.15.1",
    "sqlalchemy>=2.0.41",
    "agno>=1.5.1",
    "numpy>=2.2.6",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "pandas>=2.2.3",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=3.0.0",
    "httpx>=0.25.0",
    "ollama>=0.3.0",
    "aiohttp>=3.9.0"
]

[project.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
start-prod = "uvicorn app.main:app --host 0.0.0.0 --port 8000"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
test = "pytest"
lint = "black ."
format = "black . && isort ."

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
